[package]
name = "filterm"
version = "0.3.0"
edition = "2018"
description = "Filter terminal data to and from a child process"
documentation = "https://docs.rs/filterm"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/filterm"
license = "GPL-3.0-or-later"
keywords = ["terminal", "filter", "unix", "linux"]

[dependencies.nix]
version = "0.26"
default-features = false
features = ["fs", "ioctl", "poll", "process", "signal", "term"]
