[package]
name = "filterm"
version = "0.5.3"
edition = "2021"
rust-version = "1.74"
description = "Filter terminal data to and from a child process"
documentation = "https://docs.rs/filterm"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/filterm"
license = "GPL-3.0-or-later"
keywords = ["terminal", "filter", "unix", "linux"]

[dependencies.nix]
version = "0.30"
default-features = false
features = ["fs", "ioctl", "poll", "process", "signal", "term"]

[dependencies.atomic-int]
version = "0.1"
default-features = false
features = ["c_int", "signal"]
